Update Base Index

--- a/Index.html
+++ b/Index.html
@@ -5,6 +5,6 @@
   <title>Invenio Runbook</title>
 </head>
 <body>
-    <a href="">Sample</a>
+    <a href="docs\List.md">Sample</a>
 </body>
 </html>
